--- a/packages/navigate-theme/src/styles/base/_utilities.scss
+++ b/packages/navigate-theme/src/styles/base/_utilities.scss
@@ -212,6 +212,9 @@
   }
 }
 
+.centralize {
+}
+
 // size
 
 .u-font-size-tiny {
