--- a/packages/navigate-theme/src/styles/components/_green-bar.scss
+++ b/packages/navigate-theme/src/styles/components/_green-bar.scss
@@ -101,7 +101,7 @@
       }
 
       &:not(:first-child) {
-        border-bottom: 1px solid white !important;
+        border: 1px solid white !important;
 
         &:hover {
           background: #5ed0b9;
