--- a/packages/navigate-theme/src/styles/layouts/_navigation.scss
+++ b/packages/navigate-theme/src/styles/layouts/_navigation.scss
@@ -417,6 +417,11 @@
       @include respond(tablet) {
         float: left;
         margin-left: 1rem;
+        & > div:nth-of-type(1) {
+          width: 6rem !important;
+          height: 5rem;
+          margin-top: -0.5rem;
+        }
       }
       @include respond(phone) {
         float: left;
